@@ -1,3 +1,4 @@
 [B]Version 1.1.108[/B]
 - pornhoarder - fix search, studios, categories
 - stripchat - fix listing
+- noodlemagazine - fix playback
